src/test/ui/parser/attr-bad-meta-2.rs
// compile-flags: -Z parse-only

#[path =] //~ ERROR unexpected token: `]`
mod m {}
